--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,5 +10,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <div>Login</div>
+    <div>Register</div>
   </body>
 </html>
