--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <div>Login</div>
+    <div>Login</div> <!-- Login -->
     <div>Register</div>
   </body>
 </html>
