--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,6 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <div>Login</div> <!-- Login -->
-    <div>Register</div>
+    <div>Register</div> <!-- Register -->
   </body>
 </html>
