--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,5 +12,6 @@
     <div>Login</div> <!-- Login -->
     <div>Register</div> <!-- Register -->
     <div>testing squash 1</div>
+    <div>testing squash 2</div>
   </body>
 </html>
