test squash master -nathan

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,5 +11,7 @@
     <script type="module" src="/src/main.jsx"></script>
     <div>Login</div> <!-- Login -->
     <div>Register</div> <!-- Register -->
+    <div>testing squash 1</div>
+    <div>testing squash 2</div>
   </body>
 </html>
