--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,9 +9,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <div>Login</div> <!-- Login -->
-    <div>Register</div> <!-- Register -->
+    <!-- <div>Login</div>
+    <div>Register</div>
     <div>testing squash 1</div>
-    <div>testing squash 2</div>
+    <div>testing squash 2</div> -->
   </body>
 </html>
